objects/TFS_AUP_User_Group__c.object
<CustomObject>
    <description>Custom object used to setup group membership for users. Used for JIT provisioning</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Select all business unit to which this permission set or group is applicable</description>
        <inlineHelpText>Select all business unit to which this permission set or group is applicable</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rights Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Console</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SysId__c</fullName>
        <description>System GUID for permission set or group as appropriate</description>
        <externalId>true</externalId>
        <inlineHelpText>Set group or permission set Id</inlineHelpText>
        <label>SysId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Function__c</fullName>
        <label>User Function</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Reviewers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>TFS AUP User Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>User_Function__c</columns>
        <columns>SysId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TFS AUP User Group  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TFS AUP User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>